Run tests on cron

--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -1,5 +1,9 @@
 name: ORCA CI
-on: [ push, pull_request ]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: "0 0 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
