--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -29,6 +29,12 @@ jobs:
           - STRICT_DEPRECATED_CODE_SCAN
           - ISOLATED_TEST_ON_NEXT_MINOR
           - ISOLATED_UPGRADE_TEST_TO_NEXT_MAJOR_BETA_OR_LATER
+          - ISOLATED_UPGRADE_TEST_TO_NEXT_MAJOR_DEV
+          - DEPRECATED_CODE_SCAN_W_CONTRIB
+          - INTEGRATED_TEST_ON_NEXT_MINOR_DEV
+          - ISOLATED_TEST_ON_NEXT_MINOR_DEV
+          - INTEGRATED_UPGRADE_TEST_TO_NEXT_MINOR_DEV
+          - LOOSE_DEPRECATED_CODE_SCAN
         php-version: [ "7.3" ]
         include:
           - orca-job: ISOLATED_TEST_ON_CURRENT
@@ -49,6 +55,7 @@ jobs:
       - name: Before install
         run: |
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
+          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/174.patch | git -C ../orca apply
           ../orca/bin/ci/before_install.sh
 
       - name: Install
