Fix #4382: Do not use acquia.com as default email address

--- a/config/build.yml
+++ b/config/build.yml
@@ -60,7 +60,7 @@ docroot: ${repo.root}/docroot
 # Drupal Account Credentials. These are used for installing Drupal.
 drupal:
   #account.name: admin
-  account.mail: no-reply@acquia.com
+  account.mail: no-reply@example.com
   site.mail: ${drupal.account.mail}
   locale: en
   local_settings_file: ${docroot}/sites/${site}/settings/local.settings.php
