--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -14,6 +14,8 @@ jobs:
       ORCA_PHPCS_STANDARD: AcquiaDrupalStrict
       BLT_PRINT_COMMAND_OUTPUT: 1
       ORCA_JOB: ${{ matrix.orca-job }}
+      ORCA_COVERALLS_ENABLE: ${{ matrix.coveralls-enable }}
+      COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       matrix:
         orca-job:
@@ -36,9 +38,14 @@ jobs:
           - INTEGRATED_UPGRADE_TEST_TO_NEXT_MINOR_DEV
           - LOOSE_DEPRECATED_CODE_SCAN
         php-version: [ "7.3" ]
+        coveralls-enable: [ "FALSE" ]
         include:
           - orca-job: ISOLATED_TEST_ON_CURRENT
             php-version: "8.0"
+            coveralls-enable: "FALSE"
+          - orca-job: ISOLATED_TEST_ON_CURRENT
+            php-version: "7.3"
+            coveralls-enable: "TRUE"
 
     steps:
       - uses: actions/checkout@v2
@@ -55,6 +62,7 @@ jobs:
       - name: Before install
         run: |
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
+          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/179.patch | git -C ../orca apply
           ../orca/bin/ci/before_install.sh
 
       - name: Install
