--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "acquia/drupal-environment-detector": "^1.3.0",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
-        "consolidation/robo": "^1.4.12 || ^2",
+        "consolidation/robo": "^1.4.12 || ^2 || ^3",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/annotations": "^1.10.0",
         "drupal/core": "^9.0.0-alpha1",
@@ -61,7 +61,7 @@
     "extra": {
         "branch-alias": {
             "10.x-dev": "10.0.x-dev",
-            "dev-main": "12.x-dev"
+            "dev-main": "13.x-dev"
         },
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "installer-paths": {
