--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "acquia/drupal-environment-detector": "^1.3.0",
         "consolidation/comments": "^1.0",
         "consolidation/config": "^1.0.0",
-        "consolidation/robo": "^1.4.12 || ^2",
+        "consolidation/robo": "^1.4.12 || ^2 || ^3",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/annotations": "^1.10.0",
         "drupal/core": "^9.0.0-alpha1",
@@ -43,8 +43,7 @@
         "drupal/drupal": "*"
     },
     "require-dev": {
-        "knplabs/github-api": "^2.6",
-        "symfony/http-client": "^5.1"
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "suggest": {
         "davereid/drush-acquia-hook-invoke": "dev-master",
@@ -61,7 +60,7 @@
     "extra": {
         "branch-alias": {
             "10.x-dev": "10.0.x-dev",
-            "dev-main": "12.x-dev"
+            "dev-main": "13.x-dev"
         },
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "installer-paths": {
