--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,10 @@
 /.gitignore export-ignore
 /.travis.yml export-ignore
 /phpcs.xml.dist export-ignore
+/*.sh export-ignore
+/.acquia export-ignore
+/.gitattributes export-ignore
+/ci export-ignore
+/logs export-ignore
+/tests/fixtures export-ignore
+
