--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -63,6 +63,7 @@ jobs:
         run: |
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
           curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/179.patch | git -C ../orca apply
+          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/186.patch | git -C ../orca apply
           ../orca/bin/ci/before_install.sh
 
       - name: Install
