--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -10,7 +10,7 @@ jobs:
     env:
       ORCA_SUT_NAME: acquia/blt
       ORCA_SUT_BRANCH: main
-      ORCA_VERSION: dev-develop
+      ORCA_VERSION: ^3
       ORCA_PHPCS_STANDARD: AcquiaDrupalStrict
       BLT_PRINT_COMMAND_OUTPUT: 1
       ORCA_JOB: ${{ matrix.orca-job }}
@@ -61,9 +61,7 @@ jobs:
 
       - name: Before install
         run: |
-          composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
-          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/179.patch | git -C ../orca apply
-          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/186.patch | git -C ../orca apply
+          composer create-project --no-dev acquia/orca ../orca "$ORCA_VERSION"
           ../orca/bin/ci/before_install.sh
 
       - name: Install
