--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/annotations": "^1.10.0",
         "drupal/core": "^9.0.0-alpha1",
-        "drush/drush": "^10.2.2",
+        "drush/drush": "^10.3 || ^11",
         "enlightn/security-checker": "^1.3",
         "grasmash/yaml-cli": "^2.0.0",
         "grasmash/yaml-expander": "^1.2.0",
